@@ -6,6 +6,7 @@ int ltexturesLoadImageRaw( lua_State *L );
 int ltexturesLoadImageSvg( lua_State *L );
 int ltexturesLoadImageAnim( lua_State *L );
 int ltexturesLoadImageFromMemory( lua_State *L );
+int ltexturesLoadImageFromData( lua_State *L );
 int ltexturesLoadImageFromTexture( lua_State *L );
 int ltexturesLoadImageFromScreen( lua_State *L );
 int ltextureIsImageReady( lua_State *L );
